# mehen

./: .gitattributes  .gitignore  .pre-commit-audit-config.yaml  .pre-commit-config.yaml  .taskcluster.yml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-THIRD-PARTY  README.md  action.yml  check-grammar-crate.py  check-grammars-crates.sh  codecov.yml  hk.pkl  pyproject.toml  release-please-config.json  rust-toolchain.toml  split-minimal-tests.py
crates/mehen-c/: Cargo.toml
crates/mehen-c/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-c/tests/: abc.rs  cognitive.rs  loc.rs  nargs.rs
crates/mehen-cli/: Cargo.toml
crates/mehen-cli/src/: args.rs  commands.rs  exit.rs  main.rs
crates/mehen-cli/tests/: cli_smoke.rs  pr_comment_catalog.rs  pr_comment_golden.rs
crates/mehen-cli/tests/snapshots/: pr_comment_golden__filler_risk_unchanged_attention.snap  pr_comment_golden__new_file_summary.snap  pr_comment_golden__regression_broken_links.snap
crates/mehen-core/: Cargo.toml
crates/mehen-core/src/: analysis.rs  analyzer.rs  backend.rs  config.rs  diagnostic.rs  language.rs  lib.rs  line_index.rs  metric_key.rs  report.rs  selector.rs  source.rs  space.rs  span.rs  threshold.rs
crates/mehen-engine/: Cargo.toml
crates/mehen-engine/src/: ci.rs  concurrent_files.rs  detection.rs  diff.rs  dispatcher.rs  lib.rs  metric_selector.rs  registry.rs  report.rs  top_offenders.rs
crates/mehen-engine/src/legacy/: alterator.rs  checker.rs  concurrent_files.rs  diff.rs  formats.rs  getter.rs  langs.rs  macros.rs  metric_selector.rs  mod.rs  node.rs  parser.rs  preproc.rs  rust_metric_helpers.rs  spaces.rs  tools.rs  top_offenders.rs  traits.rs
crates/mehen-git/: Cargo.toml
crates/mehen-git/src/: lib.rs
crates/mehen-go/: Cargo.toml
crates/mehen-go/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-go/tests/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs
crates/mehen-kotlin/: Cargo.toml
crates/mehen-kotlin/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-kotlin/tests/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs  nom.rs  npa.rs  npm.rs  wmc.rs
crates/mehen-kotlin/tests/snapshots/: loc__kotlin_simple_loc.snap
crates/mehen-markdown/: Cargo.toml
crates/mehen-markdown/src/: analyzer.rs  artifact_debt.rs  code_burden.rs  dmi.rs  document.rs  ecu.rs  embedded_code.rs  evidence.rs  filler.rs  good_scaffold.rs  grammar.rs  grounding.rs  halstead.rs  legacy_node.rs  lib.rs  links.rs  loc.rs  math_burden.rs  mathops.rs  mcc.rs  mod.rs  mrpc.rs  nearby.rs  rci.rs  section_balance.rs  sections.rs  source_text.rs  syntax_tree.rs  tables.rs  tree_helpers.rs  types.rs  visuals.rs  words.rs
crates/mehen-markdown/src/data/: abbreviations_en.txt  cliches.txt  hedges.txt  nltk_stopwords_en.txt  nonwords.txt  passive_irregulars.txt  weasels.txt
crates/mehen-markdown/src/diagrams/: mermaid.rs  mod.rs
crates/mehen-markdown/src/prose/: lang_detect.rs  mod.rs
crates/mehen-markdown/tests/: markdown.rs
crates/mehen-markdown/tests/fixtures/: artifact_debt_high.md  code_fences.md  deep_nesting.md  diagram_mermaid.md  diagram_parse_error.md  embedded_code_large.md  frontmatter.md  halstead_mixed.md  images_no_alt.md  links_mixed.md  near_duplicate_paragraphs.md  passive_heavy.md  placeholder_heavy.md  pure_prose.md  short_doc.md  table_large.md  table_mixed.md  tateishi_sample.md
crates/mehen-markdown/tests/snapshots/: markdown__assert_fixture_snapshot@artifact_debt_high.md.snap  markdown__assert_fixture_snapshot@broken_links.md.snap  markdown__assert_fixture_snapshot@code_fences.md.snap  markdown__assert_fixture_snapshot@cognitive_cluster.md.snap  markdown__assert_fixture_snapshot@deep_nesting.md.snap  markdown__assert_fixture_snapshot@diagram_heavy_scaffolded.md.snap  (+23 more)
crates/mehen-metrics/: Cargo.toml
crates/mehen-metrics/src/: abc.rs  cognitive.rs  counters.rs  cyclomatic.rs  halstead.rs  halstead_builder.rs  halstead_routing.rs  lib.rs  loc.rs  mi.rs  selector.rs  state.rs  threshold.rs  tree_builder.rs
crates/mehen-php/: Cargo.toml
crates/mehen-php/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-php/tests/: abc.rs  cognitive.rs  cyclomatic.rs  halstead.rs  loc.rs  npa.rs  npm.rs  wmc.rs
crates/mehen-powershell/: Cargo.toml
crates/mehen-powershell/src/: grammar.rs  lib.rs
crates/mehen-powershell/tests/: .cognitive.rs.pending-snap  .npa.rs.pending-snap  .npm.rs.pending-snap  abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs  nom.rs  npa.rs  npm.rs  wmc.rs
crates/mehen-python/: Cargo.toml
crates/mehen-python/src/: analyzer.rs  grammar.rs  lib.rs  walker.rs
crates/mehen-python/tests/: cognitive.rs  cyclomatic.rs  halstead.rs  loc.rs  nargs.rs  parity.rs
crates/mehen-report/: Cargo.toml
crates/mehen-report/src/: github_markdown_docs.rs  json.rs  lib.rs  markdown.rs  metrics_json.rs
crates/mehen-ruby/: Cargo.toml
crates/mehen-ruby/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-ruby/tests/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs  nom.rs  npa.rs  npm.rs  parity.rs  wmc.rs
crates/mehen-rust/: Cargo.toml
crates/mehen-rust/src/: grammar.rs  lib.rs  walker.rs
crates/mehen-rust/tests/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  halstead.rs  loc.rs  nargs.rs  nom.rs  npa.rs  npm.rs  parity.rs  wmc.rs
crates/mehen-tree-sitter/: Cargo.toml
crates/mehen-tree-sitter/src/: lib.rs  parser.rs  scaffold.rs  span.rs  walker.rs
crates/mehen-typescript/: Cargo.toml
crates/mehen-typescript/src/: analyzer.rs  grammar.rs  grammar_tsx.rs  lib.rs  walker.rs
crates/mehen-typescript/tests/: parity.rs
enums/: Cargo.toml
enums/src/: common.rs  languages.rs  lib.rs  macros.rs  main.rs  rust.rs
enums/templates/: rust.rs
mehen-cli/: Cargo.toml  README.md
mehen-cli/src/: formats.rs  main.rs
mehen-web/: Cargo.toml  README.md
mehen-web/src/: lib.rs
mehen-web/src/web/: comment.rs  function.rs  metrics.rs  server.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tree_sitter.rs
xtask/templates/: grammar.rs
(+332 files in other folders)
