[workspace]
resolver = "2"
members = [
    "crates/mehen-core",
    "crates/mehen-metrics",
    "crates/mehen-tree-sitter",
    "crates/mehen-markdown",
    "crates/mehen-python",
    "crates/mehen-typescript",
    "crates/mehen-php",
    "crates/mehen-ruby",
    "crates/mehen-rust",
    "crates/mehen-go",
    "crates/mehen-c",
    "crates/mehen-kotlin",
    "crates/mehen-powershell",
    "crates/mehen-engine",
    "crates/mehen-git",
    "crates/mehen-report",
    "crates/mehen-cli",
    "xtask",
]
# `cargo run` / `cargo build` (with no `-p`) target the `mehen`
# package in `crates/mehen-cli/`. The xtask binary is reached via
# `cargo xtask …` (per `.cargo/config.toml`).
default-members = ["crates/mehen-cli"]

[workspace.lints.rust]
# Catch `pub` items in internal crates that are never re-exported across
# crate boundaries — they should be `pub(crate)` so dead-code detection
# stays effective. Members opt in with `[lints] workspace = true`.
unreachable_pub = "warn"

[workspace.package]
version = "1.0.0"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
edition = "2024"
rust-version = "1.95.0"
repository = "https://github.com/ophidiarium/mehen"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Internal crates (path-only, never published)
mehen-core = { path = "crates/mehen-core" }
mehen-metrics = { path = "crates/mehen-metrics" }
mehen-tree-sitter = { path = "crates/mehen-tree-sitter" }
mehen-markdown = { path = "crates/mehen-markdown" }
mehen-python = { path = "crates/mehen-python" }
mehen-typescript = { path = "crates/mehen-typescript" }
mehen-php = { path = "crates/mehen-php" }
mehen-ruby = { path = "crates/mehen-ruby" }
mehen-rust = { path = "crates/mehen-rust" }
mehen-go = { path = "crates/mehen-go" }
mehen-c = { path = "crates/mehen-c" }
mehen-kotlin = { path = "crates/mehen-kotlin" }
mehen-powershell = { path = "crates/mehen-powershell" }
mehen-engine = { path = "crates/mehen-engine" }
mehen-git = { path = "crates/mehen-git" }
mehen-report = { path = "crates/mehen-report" }

# Shared third-party deps with pinned versions. Single-consumer deps
# (e.g. `oxc_*`, `ra_ap_syntax`, `ruby-prism`, `crossbeam`, `env_logger`,
# `globset`, `regex`, `walkdir`, `tree-sitter-pwsh`, `unicode-*`) are
# pinned inline in their consuming crate's `Cargo.toml` instead of here.
camino = { version = "^1.1", features = ["serde1"] }
clap = { version = "^4.6", features = ["derive"] }
log = "^0.4"
num = "^0.4"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
smol_str = { version = "^0.3", features = ["serde"] }
gix = { version = "^0.84", default-features = false, features = ["attributes", "max-performance-safe", "revision", "sha1"] }

tree-sitter = "=0.26.9"
# Per-language grammars (`tree-sitter-c`, `tree-sitter-go`,
# `tree-sitter-kotlin`, `tree-sitter-pwsh`)
# are pinned inline in their consuming analyzer crate. xtask reaches
# each grammar through the analyzer's `__grammar_language()` accessor
# instead of pinning grammars itself, so the kind-enum generator and
# the runtime parser always link the same revision.
# `tree-sitter-ruby` was removed in Phase 9 (Prism) — Ruby now flows
# through `mehen-ruby` (ruby-prism) per plan §6.5.

insta = { version = "1.47.2", features = ["yaml", "json", "redactions"] }
pretty_assertions = "^1.3"
tempfile = "^3"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
