[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mehen"
dynamic = ["version"]
description = "Tool to compute and export code metrics"
authors = [{ name = "Konstantin Vyatkin", email = "tino@vtkn.io" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["metrics", "code-analysis", "complexity", "cyclomatic", "halstead"]

[project.urls]
Homepage      = "https://github.com/ophidiarium/mehen"
Repository    = "https://github.com/ophidiarium/mehen"
Documentation = "https://mehen.ophi.dev"
Issues        = "https://github.com/ophidiarium/mehen/issues"

[tool.maturin]
bindings      = "bin"
python-source = "python"
# Point at the `mehen` package's manifest. The repo root's
# `Cargo.toml` is a virtual workspace (no `[package]`/no binary
# target), so giving maturin the workspace manifest produces no
# packageable wheel.
manifest-path = "crates/mehen-cli/Cargo.toml"
