[package]
name = "enums"
version = "0.0.1"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
edition = "2024"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
askama = "^0.15"

tree-sitter = "=0.26.7"
tree-sitter-typescript = "=0.23.2"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.1"
tree-sitter-go = "=0.25.0"

[profile.release]
strip = "debuginfo"
