[package]
name = "mehen-cli"
version = "0.0.25"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
repository = "https://github.com/ophidiarium/mehen/blob/master/mehen-cli/"
edition = "2024"
rust-version = "1.93.1"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[[bin]]
name = "mehen"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
globset = "^0.4"
regex = "^1.7"
mehen = { path = "..", version = "=0.0.25" }
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^0.9"
