[package]
name = "mehen-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["metrics"]
description = "Tool to compute and export code metrics"

[[bin]]
name = "mehen"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
env_logger = "^0.11"
globset = "^0.4"
log = "^0.4"
mehen = { path = ".." }
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^1.0"
