[package]
name = "mehen-web"
version = "0.0.1"
authors = ["Konstantin Vyatkin <tino@vtkn.io>"]
edition = "2024"
rust-version = "1.93.1"
repository = "https://github.com/ophidiarium/mehen/tree/master/mehen-web"
keywords = ["metrics"]
description = "Run a web service to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
actix-rt = "^2.6"
actix-web = "^4.2"
clap = { version = "^4.0", features = ["derive"] }
futures = "^0.3"
mehen = { path = "..", version = "=0.0.1" }
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
pretty_assertions = "^1.3"
