[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — developer-only commands (snapshots, parity, tree-sitter generator) (internal)."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
askama = "^0.16"
tree-sitter = { workspace = true }
# Kind-enum codegen reaches each grammar through the owning analyzer
# crate's `__grammar_language()` accessor (see
# `xtask/src/tree_sitter.rs::TARGETS`). The analyzer's grammar pin is
# the single source of truth, so xtask deliberately does NOT depend on
# `tree-sitter-c`, `tree-sitter-go`, `tree-sitter-kotlin`, or
# `tree-sitter-markdown-text` directly — that keeps the codegen and
# the runtime parser locked to the same revision by construction.
mehen-c = { workspace = true }
mehen-go = { workspace = true }
mehen-kotlin = { workspace = true }
mehen-markdown = { workspace = true }

[lints]
workspace = true
