[package]
name = "mehen-c"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — C language analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-tree-sitter = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
# Required transitively by `num_derive::FromPrimitive` in `grammar.rs`
# — the derive expansion references `num_traits::FromPrimitive` by
# absolute path. Keep as a direct dependency and silence cargo-machete.
num-traits = { workspace = true }
smol_str = { workspace = true }
tree-sitter = { workspace = true }
# `mehen-c` is the sole consumer of tree-sitter-c after the legacy-engine
# C migration, so the workspace indirection earned nothing. Pin the
# version directly here.
tree-sitter-c = "=0.24.2"

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[lints]
workspace = true
