[package]
name = "mehen-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — CLI binary (internal; published as `mehen`)."
publish = false

# During the v1 rewrite, the 1.0 binary ships under `mehen-next` so it
# coexists with the pre-1.0 `mehen` binary at the workspace root for
# parity testing. The rename is reverted in the final phase-5 commit.
[[bin]]
name = "mehen-next"
path = "src/main.rs"

[dependencies]
mehen-core = { workspace = true }
mehen-engine = { workspace = true }
mehen-metrics = { workspace = true }
mehen-report = { workspace = true }

camino = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
