[package]
name = "mehen-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — parser-neutral domain types and analyzer traits (internal)."
publish = false

[dependencies]
camino = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
