[package]
name = "mehen-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — pipeline orchestration, language registry, concurrency (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-git = { workspace = true }

# Language analyzer crates — feature-gated via the `default` feature set.
# Phase 1 keeps every language compiled in so the registry is exercised.
mehen-markdown = { workspace = true, optional = true }
mehen-python = { workspace = true, optional = true }
mehen-typescript = { workspace = true, optional = true }
mehen-php = { workspace = true, optional = true }
mehen-ruby = { workspace = true, optional = true }
mehen-rust = { workspace = true, optional = true }
mehen-go = { workspace = true, optional = true }
mehen-c = { workspace = true, optional = true }
mehen-kotlin = { workspace = true, optional = true }
mehen-powershell = { workspace = true, optional = true }

camino = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = [
    "lang-markdown",
    "lang-python",
    "lang-typescript",
    "lang-php",
    "lang-ruby",
    "lang-rust",
    "lang-go",
    "lang-c",
    "lang-kotlin",
    "lang-powershell",
]
lang-markdown = ["dep:mehen-markdown"]
lang-python = ["dep:mehen-python"]
lang-typescript = ["dep:mehen-typescript"]
lang-php = ["dep:mehen-php"]
lang-ruby = ["dep:mehen-ruby"]
lang-rust = ["dep:mehen-rust"]
lang-go = ["dep:mehen-go"]
lang-c = ["dep:mehen-c"]
lang-kotlin = ["dep:mehen-kotlin"]
lang-powershell = ["dep:mehen-powershell"]
