[package]
name = "mehen-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — pipeline orchestration, language registry, concurrency (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-git = { workspace = true }
mehen-report = { workspace = true, optional = true }

# Language analyzer crates — feature-gated via the `default` feature set.
# Phase 1 keeps every language compiled in so the registry is exercised.
mehen-markdown = { workspace = true, optional = true }
mehen-python = { workspace = true, optional = true }
mehen-typescript = { workspace = true, optional = true }
mehen-php = { workspace = true, optional = true }
mehen-ruby = { workspace = true, optional = true }
mehen-rust = { workspace = true, optional = true }
mehen-go = { workspace = true, optional = true }
mehen-c = { workspace = true, optional = true }
mehen-kotlin = { workspace = true, optional = true }
mehen-powershell = { workspace = true, optional = true }

camino = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
globset = { workspace = true }
gix = { workspace = true }
log = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

# tree-sitter grammars used by the legacy analyzer pipeline.
# `tree-sitter-typescript` was removed in Phase 7 — TS / TSX / JS / JSX
# now flow through `mehen-typescript` (Oxc) per plan §8.2.
# `tree-sitter-python` was removed in Phase 6 — Python now flows through
# `mehen-python` (Ruff) per plan §6.2.
# `tree-sitter-rust` was removed in Phase 9 — Rust now flows through
# `mehen-rust` (ra_ap_syntax) per plan §6.1.
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-kotlin = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-markdown-text = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[features]
default = [
    "markdown",
    "lang-markdown",
    "lang-python",
    "lang-typescript",
    "lang-php",
    "lang-ruby",
    "lang-rust",
    "lang-go",
    "lang-c",
    "lang-kotlin",
    "lang-powershell",
]
# Legacy `markdown` feature — gates the markdown analyzer & document
# diff renderer in the relocated `legacy/` machinery (matches the
# pre-1.0 root-crate `markdown` feature). Pulls in `mehen-report`'s
# `docs-diff` feature so `legacy::diff` can call into the
# `github_markdown_docs` template catalog.
markdown = [
    "dep:mehen-markdown",
    "dep:mehen-report",
    "mehen-report/docs-diff",
    "dep:tree-sitter-markdown-text",
]
lang-markdown = ["dep:mehen-markdown"]
lang-python = ["dep:mehen-python"]
lang-typescript = ["dep:mehen-typescript"]
lang-php = ["dep:mehen-php"]
lang-ruby = ["dep:mehen-ruby"]
lang-rust = ["dep:mehen-rust"]
lang-go = ["dep:mehen-go"]
lang-c = ["dep:mehen-c"]
lang-kotlin = ["dep:mehen-kotlin"]
lang-powershell = ["dep:mehen-powershell"]

[package.metadata.cargo-machete]
ignored = [
    "num-traits",
    "tree-sitter-go",
    "tree-sitter-ruby",
    "tree-sitter-kotlin",
    "tree-sitter-c",
    "tree-sitter-php",
    "tree-sitter-markdown-text",
]

[lints]
workspace = true
