[package]
name = "mehen-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — pipeline orchestration, language registry, concurrency (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-git = { workspace = true }
mehen-report = { workspace = true, features = ["docs-diff"] }
mehen-markdown = { workspace = true }

# Language analyzer crates — feature-gated via the per-language `lang-*`
# features below. The `default` set compiles every analyzer in.
mehen-python = { workspace = true, optional = true }
mehen-typescript = { workspace = true, optional = true }
mehen-php = { workspace = true, optional = true }
mehen-ruby = { workspace = true, optional = true }
mehen-rust = { workspace = true, optional = true }
mehen-go = { workspace = true, optional = true }
mehen-c = { workspace = true, optional = true }
mehen-kotlin = { workspace = true, optional = true }
mehen-powershell = { workspace = true, optional = true }

camino = { workspace = true }
clap = { workspace = true }
# `crossbeam`, `globset`, and `walkdir` are pinned here (not in
# `[workspace.dependencies]`) because `mehen-engine` is the only consumer
# — concurrency, ignore-pattern matching, and recursive directory walks
# are engine-only concerns.
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
globset = "^0.4"
walkdir = "^2.3"
gix = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[features]
default = [
    "lang-python",
    "lang-typescript",
    "lang-php",
    "lang-ruby",
    "lang-rust",
    "lang-go",
    "lang-c",
    "lang-kotlin",
    "lang-powershell",
]
lang-python = ["dep:mehen-python"]
lang-typescript = ["dep:mehen-typescript"]
lang-php = ["dep:mehen-php"]
lang-ruby = ["dep:mehen-ruby"]
lang-rust = ["dep:mehen-rust"]
lang-go = ["dep:mehen-go"]
lang-c = ["dep:mehen-c"]
lang-kotlin = ["dep:mehen-kotlin"]
lang-powershell = ["dep:mehen-powershell"]

[lints]
workspace = true
