[package]
name = "mehen-go"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — Go language analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-tree-sitter = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
smol_str = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
