[package]
name = "mehen-go"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — Go language analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mehen-tree-sitter = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
# Required transitively by `num_derive::FromPrimitive` in `grammar.rs`
# — the derive expansion references `num_traits::FromPrimitive` by
# absolute path. Keep as a direct dependency and silence cargo-machete.
num-traits = { workspace = true }
smol_str = { workspace = true }
tree-sitter = { workspace = true }
# `tree-sitter-go` is pinned here (not in `[workspace.dependencies]`)
# because `mehen-go` is the sole consumer. xtask reaches the grammar
# through `__grammar_language()` exported from this crate, so the
# kind-enum generator and the analyzer parser are guaranteed to link
# the same revision.
tree-sitter-go = "=0.25.0"

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[lints]
workspace = true
